--- a/template/template_dnsmasq.conf
+++ b/template/template_dnsmasq.conf
@@ -1,4 +1,5 @@
 interface=iface_to_use
-dhcp-range=192.168.1.50,192.168.1.150,12h
+dhcp-range=10.0.0.50,10.255.255.150,12h
 dhcp-option=6,8.8.8.8
-dhcp-option=3,192.168.1.1
+dhcp-option=3,10.0.0.1
+dhcp-authoritative
