--- a/template/template_dnsmasq.conf
+++ b/template/template_dnsmasq.conf
@@ -1,5 +1,4 @@
 interface=iface_to_use
-dhcp-range=10.0.0.50,10.255.255.150,12h
-dhcp-option=6,8.8.8.8
-dhcp-option=3,10.0.0.1
-dhcp-authoritative
+dhcp-range=10.10.0.10,10.0.0.50,12h
+dhcp-option=6,8.8.8.8 #DNS
+dhcp-option=3,10.0.0.1 #Gateway
